tautulli/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tautulli
  template:
    spec:
      containers:
      - name: tautulli
        securityContext:
          privileged: true
        image: tautulli/tautulli
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: 8181
        volumeMounts:
          - mountPath: "/config"
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
