tautulli/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: tautulli
  labels:
    k8s-app: tautulli
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: tautulli
    spec:
      containers:
      - name: tautulli
        image: linuxserver/tautulli
        imagePullPolicy: Always
        ports:
        - containerPort: 8181
        volumeMounts:
          - mountPath: "/config"
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
