tautulli/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: tautulli

spec:
  selector:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: http
