tautulli/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  labels:
    k8s-app: tautulli
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Tautulli"
    gethomepage.dev/description: "Plex Monitoring and Statistics"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "tautulli.png"
spec:
  tls:
    - hosts:
        - "tautulli.k.oneill.net"
      secretName: "tautulli-tls"
  rules:
    - host: "tautulli.k.oneill.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli
                port:
                  number: 8181
